  repeated course, where one of the attempts was substituted, the other not.

  Re: ticket #2311, added array of group id's to the form_state, when a year of degree data is being duplicated.
  
  Re: ticket #2312, fixed a bug where sometimes a group popup doesn't show the same branch as what the View screen
  does.  Spexial thanks to Logan Buth for discovering this issue and proposing the fix.
  

2018-04-11
  Fixed an issue with "clean URLs" when site is hosted on a bare domain.
  
  Updated install.php to have more instructions in the settings.php file for bare domain hosting.
  
  Fixed small issues causing PHP Notice's to show up.
  
  Fixed bug where substitutions were not displaying correctly in Display by Year view.
  

2018-04-07
  Fixed some small display issues in AdvisingScreen, to keep PHP notices from appearing.
  
  Added new hook, hook_theme_advise_degree_header_row, with special thanks to Logan Buth.


2018-03-29
  Made a bug fix to where a pie chart would display 99 if its value was above 100.  Instead, this was changed to 100.
  
  Fixed a bug in get_term_structure() where the abbreviation and long description were switched.

  Modified the CourseList::remove_previously_fulfilled() function, where it uses find_best_match() to find a match
  for a course, instead of the parent's find_match() function.  This allows for hooks to be used, as well as the
  school's sorting/matching policy to be used.  Special thanks to Logan Buth. 
  
  Added new methods & updated existing in CourseList: sort_largest_hours_first(), and made modifications to find_best_grade_match()
  and sort_best_grade_first().  This was to correct a subtle bug which appeared if a student took a non-repeatable course twice,
  and received the same grade both times, but had different hours.  For example, if a student earned 0 hours on one attempt,
  and 4 hours on the next.  Special thanks to Logan Buth.
  

2018-03-17